# ray

./: .gitignore  Cargo.toml  README.md  TODO  a.out  demo.c++  keygen.txt  nmcli.txt  notes.md  oui  p6.cpp
src/: all.rs  change.rs  cli.rs  defin.rs  dev.rs  dev_info.rs  info.rs  main.rs  validate.rs
