[package]
name = "cmac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "*"
prettytable = "*"
tabled = { version = "0.14.0", features = ["color"] }
libc = "0.2.150"
nix = "*"
terminal_size="*"
hashbrown = { version = "0.14.1", features = ["rayon"] }
reqwest = "0.11.22"
tokio = { version = "1.33.0", features = ["full"] }
