[package]
name = "cmac"
version = "0.1.0"
edition = "2021"
# build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tabled = { version = "*", features = ["color"] }
libc = "0.2.151"
hashbrown = { version = "0.14.1", features = ["rayon"] }
reqwest = "0.11.22"
tokio = { version = "1.33.0", features = ["full"] }
clap = { version = "4.5.0", features = ["derive"] }
clap_complete = "*"
nix="*"