[package]
name = "ray"
version = "0.1.0"
edition = "2021"
# build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tabled = { version = "*", features = ["color"] }
libc = "*"
hashbrown = { version = "0.14.1", features = ["rayon"] }
clap = { version = "4.5.0", features = ["derive"] }
nix = "*"